# blinders

./: .env.example  .gitignore  .golangci.yml  Makefile  README.md  checkpylint.sh  dev-requirements.txt  dev.docker-compose.yml  go.mod  go.work  go.work.sum  main.py  package.json  pyproject.toml
.github/workflows/: golangci-lint.yml  pythonci-lint.yml
cli/: README.md  blinders.go  go.mod  go.sum  index.js  package.json
cli/commands/: auth.go
cmd/: README.md  build_lambda.sh  check_pylint.sh  resolve_go_modules.sh
deployment/: certificate.tf  iam.tf  lambda.tf  main.tf  route.tf
docs/: chat_flow.md
functions/: README.md
functions/authentication/: go.mod  main.go
functions/chat/: go.mod  go.sum  main.go
functions/collecting/: go.mod  main.go
functions/dictionary/: README.md  __main__.py  pyproject.toml
functions/dictionary/blinders/dictionary_aws_lambda_function/: __init__.py  __main__.py
functions/dictionary/tests/: test_call_handle_dictionary.py
functions/flashcard/: README.md  go.mod  main.go
functions/grammar/: go.mod
functions/match/: go.mod  main.go
functions/matching/: go.mod
functions/practice/: go.mod  go.sum  main.go
functions/rest/: go.mod  go.sum  main.go
functions/suggest/: go.mod
functions/suggestion/: README.md  go.mod  go.sum  main.go
functions/translate/: go.mod  main.go
functions/translation/: go.mod  go.sum  main.go
functions/users/: go.mod
functions/utils/: doc.go  (+3 more)
infra/: .terraform.lock.hcl  api-gateway.tf  certificate.tf  domain.tf  ec2.tf  gateway.tf  iam.tf  lambda.tf  provider.tf  route.tf  variables.tf
scripts/: build_golambda.sh  build_pylambda.sh  check_pylint.sh
services/: README.md
services/explore/: go.mod  go.sum  main.go  pyproject.toml
services/explore/api/: handlers.go  main.go
services/explore/blinders/explore_service/: main.py  migrate.py
services/explore/blinders/explore_service/cmd/: dump.py  load.py  migrate.py  mock.py
services/explore/blinders/explore_service/core/: main.py
tests/: go.mod
tools/: .air.rest.toml  README.md
utils/: firestore.go  go.sum
(+70 files in other folders)
