[tool.poetry]
name = "blinders"
version = "0.1.0"
description = "Monorepo, microservice back-end project named Blinders for Peakee - a language learning platform."
authors = ["Tan Le <tanlethanh8266@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.10.1"
pylint = "^3.0.2"
isort = "^5.12.0"
pyright = "^1.1.334"
pytest = "^7.4.3"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pylint."messages control"]
ignore = ["setup.py", "__init__.py", "tests"]
disable = "all"
enable = ["missing-class-docstring", "missing-function-docstring"]

[tool.isort]
profile = "black"
known_first_party = ["mycorp"]

[tool.pyright]
reportMissingTypeArgument = true # Report generic classes used without type arguments
strictListInference = true       # Use union types when inferring types of lists elements, instead of Any
