[tool.poetry]
name = "blinders-dictionary-aws-lambda"
version = "0.1.0"
description = ""
authors = ["Tan Le <tanlethanh8266@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
blinders-dictionary-core = { path = "../../packages/dictionary", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
