[tool.poetry]
name = "blinders-explore-service"
version = "0.1.0"
description = ""
authors = ["Dat Nguyen <minhdat15012002@gmail.com>"]
readme = "README.md"
packages = [{ include = "blinders" }]                # make build backend success

[tool.poetry.dependencies]
python = "^3.10"
blinders-explore-core = { path = "../../packages/explore", develop = true }
fastapi = "^0.110.0"
pymongo = "^4.6.2"
python-dotenv = "^1.0.1"
flask = "^3.0.2"
flask-classful = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
